# linefit_ground_segmentation

./: .gitignore  CMakeLists.txt  LICENSE  README.md  example.py  package.xml  pyproject.toml  setup.py
.github/workflows/: Pip.yml  Wheels.yml
assets/: README.md  config.toml
assets/data/: av2.npy  kitti0.npy  kitti0.pcd
assets/view/: center.json
benchmarks/linear_system_solving/: ground_seg_benchmark.m  linear_system_benchmark_2.csv
cpp/: CMakeLists.txt  package.xml
cpp/cmake/: CompilerOptions.cmake  dependencies.cmake
cpp/linefit/: bin.h  ground_segmentation.cpp  ground_segmentation.h  mics.h  segment.cpp  segment.h  toml.hpp  typedefs.h
doc/: kitti.ply
include/ground_segmentation/: bin.h  ground_segmentation.h  segment.h
launch/: segmentation.launch  segmentation_params.yaml  test.launch
linefit/include/ground_segmentation/: segment.h  typedefs.h  viewer.h
linefit/src/: ground_segmentation.cc
linefit_ground_segmentation/: CMakeLists.txt  package.xml
linefit_ground_segmentation/include/ground_segmentation/: bin.h  ground_segmentation.h  segment.h  typedefs.h  viewer.h
linefit_ground_segmentation/src/: bin.cc  ground_segmentation.cc  segment.cc  viewer.cc
linefit_ground_segmentation_ros/: CMakeLists.txt  package.xml
linefit_ground_segmentation_ros/launch/: segmentation.launch  segmentation_params.yaml  test.launch
linefit_ground_segmentation_ros/src/: ground_segmentation_node.cc  ground_segmentation_test_node.cc
python/: CMakeLists.txt  linefit_ext.cpp
python/utils/: o3d_view.py
src/: bin.cc  ground_segmentation.cc  ground_segmentation_node.cc  ground_segmentation_test_node.cc  segment.cc
tests/: test_basic.py
