<?xml version="1.0"?>
<package format="2">
  <name>linefit_ground_segmentation_ros</name>
  <version>0.0.1</version>
  <description>linefit_ground_segmentation_ros</description>
  
  <maintainer email="lorenwel@ethz.ch">Lorenz Wellhausen</maintainer>
  
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <depend>eigen_conversions</depend>
  <depend>linefit_ground_segmentation</depend>
  <depend>roscpp</depend>
  <depend>pcl_conversions</depend>  
  <depend>pcl_ros</depend>
  <depend>tf2_ros</depend>
  
</package>

